--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^11.12.0",
     "lucide-react": "^0.408.0",
+    "motion": "^11.15.0",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
