--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.15.0",
+    "lenis": "^1.1.20",
     "lucide-react": "^0.408.0",
     "motion": "^11.15.0",
     "next": "14.2.5",
