--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-navigation-menu": "^1.2.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@react-three/fiber": "^8.0.27",
     "@vercel/analytics": "^1.5.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -23,16 +24,17 @@
     "geist": "^1.3.1",
     "lenis": "^1.1.20",
     "lucide-react": "^0.408.0",
-    "motion": "^11.15.0",
+    "motion": "^11.18.2",
     "next": "14.2.5",
     "next-sitemap": "^4.2.3",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "sharp": "^0.33.5",
-    "tailwind-merge": "^2.4.0",
+    "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
-    "tailwindcss-animated": "^1.1.2"
+    "tailwindcss-animated": "^1.1.2",
+    "three": "^0.174.0"
   },
   "devDependencies": {
     "@types/node": "^20",
